--- a/SAX.ipynb
+++ b/SAX.ipynb
@@ -28,7 +28,9 @@
     "from aeon.datasets import load_unit_test\n",
     "from matplotlib import colormaps\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "\n"
+    "\n",
+    "# Test\n",
+    "# Test 2"
    ]
   },
   {
