--- a/SAX.ipynb
+++ b/SAX.ipynb
@@ -18,19 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/musti/miniconda3/lib/python3.10/site-packages/aeon/base/__init__.py:24: FutureWarning: The aeon package will soon be releasing v1.0.0 with the removal of legacy modules and interfaces such as BaseTransformer and BaseForecaster. This will contain breaking changes. See aeon-toolkit.org for more information. Set aeon.AEON_DEPRECATION_WARNING or the AEON_DEPRECATION_WARNING environmental variable to 'False' to disable this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from aeon.transformations.collection.dictionary_based import SAX\n",
     "from aeon.datasets import load_unit_test\n",
     "from matplotlib import colormaps\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "# Test\n",
-    "# Test 2"
+    "from sklearn.preprocessing import StandardScaler\n"
    ]
   },
   {
