Requirements semi-solved

--- a/SAX.ipynb
+++ b/SAX.ipynb
@@ -523,13 +523,7 @@
    "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
-    "\n",
-    "# Replace 'dataset_name' with the name of the dataset you want to load\n",
-    "dataset = load_dataset('AIML-TUDA/P2S', 'Decoy', download_mode='reuse_dataset_if_exists')\n",
-    "\n",
-    "# If the dataset has specific configurations (like splits), you can specify them\n",
-    "# For example, to load only the 'train' split:\n",
-    "# dataset = load_dataset('dataset_name', split='train')"
+    "dataset = load_dataset('AIML-TUDA/P2S', 'Decoy', download_mode='reuse_dataset_if_exists')"
    ]
   },
   {
@@ -547,9 +541,6 @@
     }
    ],
    "source": [
-    "# You can access the data like this:\n",
-    "#print(dataset)\n",
-    "\n",
     "# Print the first example in the dataset\n",
     "# print(dataset['train'][0])  # Use 'train', 'test', etc. as needed\n",
     "\n",
@@ -557,7 +548,7 @@
     "\n",
     "print(X.shape)\n",
     "# (1154, 4)\n",
-    "print(X[0])\n"
+    "print(X[0])"
    ]
   },
   {
