initial tsfresh feature extraction

--- a/tsfresh.ipynb
+++ b/tsfresh.ipynb
@@ -4,6 +4,399 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# tsfresh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/musti/miniconda3/lib/python3.10/site-packages/aeon/base/__init__.py:24: FutureWarning: The aeon package will soon be releasing v1.0.0 with the removal of legacy modules and interfaces such as BaseTransformer and BaseForecaster. This will contain breaking changes. See aeon-toolkit.org for more information. Set aeon.AEON_DEPRECATION_WARNING or the AEON_DEPRECATION_WARNING environmental variable to 'False' to disable this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from aeon.transformations.collection.dictionary_based import SAX\n",
+    "from aeon.datasets import load_unit_test\n",
+    "from matplotlib import colormaps\n",
+    "\n",
+    "\n",
+    "from tsfresh.feature_extraction import extract_features\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### aeon test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(42, 24)\n",
+      "[[ 573.  375.  301.  212.   55.   34.   25.   33.  113.  143.  303.  615.\n",
+      "  1226. 1281. 1221. 1081.  866. 1096. 1039.  975.  746.  581.  409.  182.]\n",
+      " [ 394.  264.  140.  144.  104.   28.   28.   25.   70.  153.  401.  649.\n",
+      "  1216. 1399. 1249. 1240. 1109. 1137. 1290. 1137.  791.  638.  597.  316.]\n",
+      " [ 603.  348.  176.  177.   47.   30.   40.   42.  101.  180.  401.  777.\n",
+      "  1344. 1573. 1408. 1243. 1141. 1178. 1256. 1114.  814.  635.  304.  168.]\n",
+      " [ 428.  309.  199.  117.   82.   43.   24.   64.  152.  183.  408.  797.\n",
+      "  1288. 1491. 1523. 1460. 1365. 1520. 1700. 1797. 1596. 1139.  910.  640.]\n",
+      " [ 372.  310.  203.  133.   65.   39.   27.   36.  107.  139.  329.  651.\n",
+      "   990. 1027. 1041.  971. 1104.  844. 1023. 1019.  862.  643.  591.  452.]]\n",
+      "   ts_id     ts\n",
+      "0      0  573.0\n",
+      "1      0  375.0\n",
+      "2      0  301.0\n",
+      "3      0  212.0\n",
+      "4      0   55.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Feature Extraction: 100%|███████████████████████| 14/14 [00:00<00:00, 20.07it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\ndataset = pd.DataFrame(dataset)\\nprint(dataset.head())\\n# tsfresh expects the data in a long DataFrame\\nX = extract_features(dataset, column_id='id')\\nprint(X.head())\\n\""
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset, _ = load_unit_test()\n",
+    "dataset = np.squeeze(dataset)\n",
+    "\n",
+    "print(dataset.shape)\n",
+    "print(dataset[:5])\n",
+    "\n",
+    "indices = np.ones(dataset.shape, dtype=int)\n",
+    "\n",
+    "for i in range(indices.shape[0]):\n",
+    "    indices[i] *= i\n",
+    "    \n",
+    "dataset_pd = pd.DataFrame(dataset.flatten())\n",
+    "indices_pd = pd.DataFrame(indices.flatten())\n",
+    "\n",
+    "    \n",
+    "df = pd.concat((indices_pd, dataset_pd), axis=1)\n",
+    "df.columns = [\"ts_id\", \"ts\"]\n",
+    "\n",
+    "print(df.head())\n",
+    "\n",
+    "X = extract_features(df, column_id='ts_id')\n",
+    "\n",
+    "\"\"\"\n",
+    "dataset = pd.DataFrame(dataset)\n",
+    "print(dataset.head())\n",
+    "# tsfresh expects the data in a long DataFrame\n",
+    "X = extract_features(dataset, column_id='id')\n",
+    "print(X.head())\n",
+    "\"\"\"\n",
+    "\n",
+    "# Emitted column_sort='time'\n",
+    "# the time series are already sorted\n",
+    "\n",
+    "#sax_aeon = SAXTransformer(n_segments=6, alphabet_size=8)\n",
+    "#dataset_sax, dataset, dataset_scaled = sax_aeon.transform(dataset)\n",
+    "#sax_aeon.drawGrid(dataset, dataset_scaled, dataset_sax) #rows=2, columns=4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ts__variance_larger_than_standard_deviation</th>\n",
+       "      <th>ts__has_duplicate_max</th>\n",
+       "      <th>ts__has_duplicate_min</th>\n",
+       "      <th>ts__has_duplicate</th>\n",
+       "      <th>ts__sum_values</th>\n",
+       "      <th>ts__abs_energy</th>\n",
+       "      <th>ts__mean_abs_change</th>\n",
+       "      <th>ts__mean_change</th>\n",
+       "      <th>ts__mean_second_derivative_central</th>\n",
+       "      <th>ts__median</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ts__fourier_entropy__bins_5</th>\n",
+       "      <th>ts__fourier_entropy__bins_10</th>\n",
+       "      <th>ts__fourier_entropy__bins_100</th>\n",
+       "      <th>ts__permutation_entropy__dimension_3__tau_1</th>\n",
+       "      <th>ts__permutation_entropy__dimension_4__tau_1</th>\n",
+       "      <th>ts__permutation_entropy__dimension_5__tau_1</th>\n",
+       "      <th>ts__permutation_entropy__dimension_6__tau_1</th>\n",
+       "      <th>ts__permutation_entropy__dimension_7__tau_1</th>\n",
+       "      <th>ts__query_similarity_count__query_None__threshold_0.0</th>\n",
+       "      <th>ts__mean_n_absolute_max__number_of_maxima_7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13485.0</td>\n",
+       "      <td>11992885.0</td>\n",
+       "      <td>146.217391</td>\n",
+       "      <td>-17.000000</td>\n",
+       "      <td>-0.659091</td>\n",
+       "      <td>491.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.535961</td>\n",
+       "      <td>0.793730</td>\n",
+       "      <td>1.410514</td>\n",
+       "      <td>1.246977</td>\n",
+       "      <td>1.719655</td>\n",
+       "      <td>2.180946</td>\n",
+       "      <td>2.479122</td>\n",
+       "      <td>2.736339</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1131.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14519.0</td>\n",
+       "      <td>14390555.0</td>\n",
+       "      <td>138.956522</td>\n",
+       "      <td>-3.391304</td>\n",
+       "      <td>-3.431818</td>\n",
+       "      <td>499.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.535961</td>\n",
+       "      <td>0.535961</td>\n",
+       "      <td>1.517152</td>\n",
+       "      <td>1.570383</td>\n",
+       "      <td>2.199225</td>\n",
+       "      <td>2.666149</td>\n",
+       "      <td>2.871476</td>\n",
+       "      <td>2.890372</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1238.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15100.0</td>\n",
+       "      <td>15863358.0</td>\n",
+       "      <td>163.173913</td>\n",
+       "      <td>-18.913043</td>\n",
+       "      <td>2.704545</td>\n",
+       "      <td>502.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.535961</td>\n",
+       "      <td>0.937156</td>\n",
+       "      <td>1.410514</td>\n",
+       "      <td>1.365897</td>\n",
+       "      <td>2.045576</td>\n",
+       "      <td>2.524058</td>\n",
+       "      <td>2.652588</td>\n",
+       "      <td>2.707270</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1306.142857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19235.0</td>\n",
+       "      <td>24911691.0</td>\n",
+       "      <td>158.695652</td>\n",
+       "      <td>9.217391</td>\n",
+       "      <td>-3.431818</td>\n",
+       "      <td>718.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.535961</td>\n",
+       "      <td>0.535961</td>\n",
+       "      <td>1.178655</td>\n",
+       "      <td>1.167286</td>\n",
+       "      <td>1.619898</td>\n",
+       "      <td>2.108170</td>\n",
+       "      <td>2.506662</td>\n",
+       "      <td>2.707270</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1583.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12978.0</td>\n",
+       "      <td>10651436.0</td>\n",
+       "      <td>111.826087</td>\n",
+       "      <td>3.478261</td>\n",
+       "      <td>-1.750000</td>\n",
+       "      <td>521.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.535961</td>\n",
+       "      <td>0.535961</td>\n",
+       "      <td>1.285293</td>\n",
+       "      <td>1.446998</td>\n",
+       "      <td>1.883954</td>\n",
+       "      <td>2.191013</td>\n",
+       "      <td>2.479122</td>\n",
+       "      <td>2.707270</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1025.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 783 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ts__variance_larger_than_standard_deviation  ts__has_duplicate_max  \\\n",
+       "0                                          1.0                    0.0   \n",
+       "1                                          1.0                    0.0   \n",
+       "2                                          1.0                    0.0   \n",
+       "3                                          1.0                    0.0   \n",
+       "4                                          1.0                    0.0   \n",
+       "\n",
+       "   ts__has_duplicate_min  ts__has_duplicate  ts__sum_values  ts__abs_energy  \\\n",
+       "0                    0.0                0.0         13485.0      11992885.0   \n",
+       "1                    0.0                1.0         14519.0      14390555.0   \n",
+       "2                    0.0                0.0         15100.0      15863358.0   \n",
+       "3                    0.0                0.0         19235.0      24911691.0   \n",
+       "4                    0.0                0.0         12978.0      10651436.0   \n",
+       "\n",
+       "   ts__mean_abs_change  ts__mean_change  ts__mean_second_derivative_central  \\\n",
+       "0           146.217391       -17.000000                           -0.659091   \n",
+       "1           138.956522        -3.391304                           -3.431818   \n",
+       "2           163.173913       -18.913043                            2.704545   \n",
+       "3           158.695652         9.217391                           -3.431818   \n",
+       "4           111.826087         3.478261                           -1.750000   \n",
+       "\n",
+       "   ts__median  ...  ts__fourier_entropy__bins_5  ts__fourier_entropy__bins_10  \\\n",
+       "0       491.0  ...                     0.535961                      0.793730   \n",
+       "1       499.0  ...                     0.535961                      0.535961   \n",
+       "2       502.0  ...                     0.535961                      0.937156   \n",
+       "3       718.5  ...                     0.535961                      0.535961   \n",
+       "4       521.5  ...                     0.535961                      0.535961   \n",
+       "\n",
+       "   ts__fourier_entropy__bins_100  ts__permutation_entropy__dimension_3__tau_1  \\\n",
+       "0                       1.410514                                     1.246977   \n",
+       "1                       1.517152                                     1.570383   \n",
+       "2                       1.410514                                     1.365897   \n",
+       "3                       1.178655                                     1.167286   \n",
+       "4                       1.285293                                     1.446998   \n",
+       "\n",
+       "   ts__permutation_entropy__dimension_4__tau_1  \\\n",
+       "0                                     1.719655   \n",
+       "1                                     2.199225   \n",
+       "2                                     2.045576   \n",
+       "3                                     1.619898   \n",
+       "4                                     1.883954   \n",
+       "\n",
+       "   ts__permutation_entropy__dimension_5__tau_1  \\\n",
+       "0                                     2.180946   \n",
+       "1                                     2.666149   \n",
+       "2                                     2.524058   \n",
+       "3                                     2.108170   \n",
+       "4                                     2.191013   \n",
+       "\n",
+       "   ts__permutation_entropy__dimension_6__tau_1  \\\n",
+       "0                                     2.479122   \n",
+       "1                                     2.871476   \n",
+       "2                                     2.652588   \n",
+       "3                                     2.506662   \n",
+       "4                                     2.479122   \n",
+       "\n",
+       "   ts__permutation_entropy__dimension_7__tau_1  \\\n",
+       "0                                     2.736339   \n",
+       "1                                     2.890372   \n",
+       "2                                     2.707270   \n",
+       "3                                     2.707270   \n",
+       "4                                     2.707270   \n",
+       "\n",
+       "   ts__query_similarity_count__query_None__threshold_0.0  \\\n",
+       "0                                                NaN       \n",
+       "1                                                NaN       \n",
+       "2                                                NaN       \n",
+       "3                                                NaN       \n",
+       "4                                                NaN       \n",
+       "\n",
+       "   ts__mean_n_absolute_max__number_of_maxima_7  \n",
+       "0                                  1131.285714  \n",
+       "1                                  1238.285714  \n",
+       "2                                  1306.142857  \n",
+       "3                                  1583.857143  \n",
+       "4                                  1025.000000  \n",
+       "\n",
+       "[5 rows x 783 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Feature Extraction and Selection"
    ]
   },
@@ -1471,13 +1864,6 @@
     "extract_relevant_features(df, y, column_id='id', column_sort='time',\n",
     "                          default_fc_parameters=extraction_settings)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
