--- a/SAX.ipynb
+++ b/SAX.ipynb
@@ -6,7 +6,9 @@
     "id": "CsC3yuHSTE5m"
    },
    "source": [
-    "# SAX\n"
+    "# SAX\n",
+    "\n",
+    "Jupyter Notebook used for initial testing of SAX."
    ]
   },
   {
